--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,10 +1,22 @@
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 700px) {
+  .item p{
+    padding: 20px 0px;
+  }
+  #aboutme-cont {
+    margin-top: 4rem;
+    margin-bottom: 12rem;
+}
+
+  
   #info {
     padding: 2px 16px;
   }
 
   .header{
-    padding-left: 8px;
+    /* padding-left: 8px; */
+    flex-direction: column-reverse;
+    justify-content: center;
+    padding: 10px;
   }
   #aboutme-cont>div{
     flex-direction: column;
@@ -48,9 +60,10 @@
   }
   .l2 {
     padding-left: 28px;
+    font-size: 5rem
   }
   .l3 span {
-    font-size: 0.8rem;
+    font-size: 1rem;
   }
   .item {
     font-size: 6rem;
@@ -80,6 +93,7 @@
 }
 
 @media only screen and (max-width: 768px) and (min-width: 481px) {
+
   .link-fixed a {
     width: 100px;
     height: 100px;
@@ -143,6 +157,14 @@
 }
 
 @media only screen and (max-width: 1200px) and (min-width: 481px) {
+  
+  .header{
+    /* padding-left: 8px; */
+    flex-direction: column-reverse;
+    justify-content: center;
+  }
+
+ 
   .link-fixed a {
     width: 120px;
     height: 120px;
@@ -192,3 +214,21 @@
     width: 90%;
   }
 }
+
+
+@media only screen and (max-width: 1700px) and (min-width: 1500px){
+  .header{
+    flex-wrap: wrap;
+  }
+
+}
+@media only screen and (max-width: 320px) {
+  .sec-box {
+    padding: 0px
+    /* border: 5px solid rgb(96 91 91 / 72%); */
+   
+ 
+  }
+
+}
+
